--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -1,4 +1,7 @@
 {
+    "language_fr": "French",
+    "language_en": "English",
+
     "clearPiece_tooltip": "Clear the content of this tile.",
     "deletePiece_tooltip": "Delete the tile",
     "moveRight_tooltip": "Shift the tile to the right. In case a tile is already present, their positions are swapped.",
