--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -265,6 +265,59 @@
     "comments_button_answer": "Answer",
     "comments_button_newComment": "Add a comment",
     "comments_answer_delete": "this Answer",
-    "comments_comment_delete": "this Comment"
+    "comments_comment_delete": "this Comment",
 
+    "tutorial_resume": "Resume tutorial",
+    "tutorial_leave": "Reduce",
+    "tutorial_title": "Tutorial",
+    "tutorial_finish" : "Congratulations, you have completed the tutorial. Feel free to explore the optional features to fully enjoy the RLG Maker.",
+    "tutorial_previous": "Previous",
+    "tutorial_next": "Next",
+    "tutorial_phase": "Phase",
+    "tutorial_back": "Back to the classic tutorial",
+    "tutorial_optionnal": "Optional features to enhance your scenario",
+    "tutorial_phase_1_title": "1. Navigate in the RLG Maker: ",
+    "tutorial_phase_1": "- Move up and down: Hold the right mouse button and drag on the page, or swipe two fingers on the touchpad (up to scroll down and vice versa to scroll up). Alternatively, click on the mini-map area where you want to move.",
+    "tutorial_phase_2_title": "2. Navigate in the RLG Maker:",
+    "tutorial_phase_2": "- Zoom in or out: use the mouse wheel or spread 2 fingers on a touchpad to zoom in and pinch them together to zoom out. Another option: use the zoom buttons at the bottom right of the page.",
+    "tutorial_phase_3_title": "3. Define pedagogical objectives and context:",
+    "tutorial_phase_3": "Fill the tiles from left to right. There is no priority order for tiles in the same column.",
+    "tutorial_phase_4_title": "4. Define roles:",
+    "tutorial_phase_4": "Choose the different roles present in your scenario. They are arranged in the same column, so the 2nd one is placed below the 1st. IMPORTANT: roles should perform tasks together (discussion, action, exchange of elements) at 1 or more moments.",
+    "tutorial_phase_5_title": "5. In the order of your choice: choose and name quests & define quest rewards:",
+    "tutorial_phase_5": "Give a name to the quest for each role. What will they do in a few words? What will the role obtain at the end of their quest? Unlock a new quest, obtain an item, improve skills in a domain, etc.",
+    "tutorial_phase_6_title": "6. Define tasks for each role:",
+    "tutorial_phase_6": "Define all actions to be taken to achieve the pedagogical objectives defined earlier for each role.",
+    "tutorial_phase_7_title": "7. In the order of your choice: highlight common tasks, identify prerequisites & estimate task duration:",
+    "tutorial_phase_7": "For each task done with another role, click on the top right of that task and choose the same symbol for tasks performed simultaneously. Identify the order of execution of tasks for the same role. Click on the 'prerequisites' button for the task and select the task(s) necessary to execute it. If a task is to be done after another, it should be placed in the column to its right. If an action is quick to perform, it will take 1 Unit of Time (UT), setting a larger UT will increase the size of the task. This ensures that common tasks can be performed simultaneously and that scenarios have the same duration.",
+    "tutorial_phase_8_title": "8. Order the tasks:",
+    "tutorial_phase_8": "If not done in the previous phase, move tasks based on prerequisites using the arrows that appear when hovering over a task. Tasks in the same column have no execution order. Those in the first column have no prerequisites and can be executed at the beginning of the game.",
+    "tutorial_phase_9_title": "9. Add side tasks.",
+    "tutorial_phase_9": "Quick and unnecessary tasks to achieve pedagogical objectives, they serve to occupy a role while another finishes their tasks to reach a common task together or even to achieve equivalent playtime between roles. A player can do all side tasks quickly or none at all; it should not be a blocking factor for the scenario.",
+    "tutorial_optionnal_event": "Random Event",
+    "tutorial_optionnalPhase_event": "These are useful if you want to add an element of unpredictability to your scenario, making the game more replayable. To add one, click on the '+' as if adding a Task and select 'Random Event'.",
+    "tutorial_optionnal_repeatTask": "Repeated Task",
+    "tutorial_optionnalPhase_repeatTask": "If a task needs to be repeated a certain number of times or until a certain condition is met, click on that task, and enter the conditions in the dedicated tile in the sidebar. An icon will appear on the Task to easily identify this indication.",
+    "tutorial_optionnal_interrupt": "Interrupt Another Role's Task",
+    "tutorial_optionnalPhase_interrupt": "If a task can be interrupted by another role, click on that task and fill in the conditions in the corresponding tile in the sidebar. An icon will appear on the Task to easily identify this indication.",
+    "tutorial_optionnal_rules": "Game Rules",
+    "tutorial_optionnalPhase_rules": "If you want to precisely define the rules of your game.",
+    "tutorial_optionnal_finalTask": "Final Task",
+    "tutorial_optionnalPhase_finalTask": "This task is used to conclude the quest. There are no more tasks after this one. If there are multiple ways to finish a quest, you can add multiple Final Tasks, each representing a different ending.",
+    "tutorial_optionnal_repeat": "Repeat the Turn",
+    "tutorial_optionnalPhase_repeat": "This tile allows you to repeat a sequence of actions and avoids having to copy tasks indefinitely. The tasks to be repeated can either be from the very beginning of the quest or from the beginning of a Step. To add a tile of this type, click on a '+' as if adding a Task.",
+    "tutorial_optionnal_step": "Step",
+    "tutorial_optionnalPhase_step": "This tile allows you to 'break down' the quest into multiple parts if necessary.",
+    "tutorial_optionnal_supplementaryRole": "Supplementary Role",
+    "tutorial_optionnalPhase_supplementaryRole": "This allows a role to have additional options related to this new function. For example, they can perform tasks specific to this supplementary role. To do this, provide the information for this role, then click on the relevant Task and select this role in the 'Task linked to the supplementary role' tile in the sidebar. If you have defined a specific color for this role, the linked Task will have the same color.",
+    "tutorial_optionnal_optionnalTask": "Optional Task",
+    "tutorial_optionnalPhase_optionnalTask": "This Task is necessary to meet pedagogical objectives, unlike additional Tasks. However, the role will have the choice between 2 optional Tasks to accomplish what is asked. For example, if they have to create a website, they could either (optional Task 1) use a platform that allows creating websites without coding or (optional Task 2) create their site from scratch, with code.",
+    "tutorial_optionnal_characters": "Non-player Characters",
+    "tutorial_optionnalPhase_characters": "It is possible to add non-player characters to your scenario who can interact with the Roles. To do this, create a character (1st column on the left) and then select the task in which they will intervene and choose this character in the associated tile in the sidebar. An icon in the color of your character will appear on the Task to easily identify this indication.",
+    "tutorial_optionnal_resource": "Resources (& skills)",
+    "tutorial_optionnalPhase_resource": "Distinguish between resources common to all players, found at the bottom of the Game Rules tile, and resources specific to each Role (defined at the bottom of their tile). Resources can be prerequisites for completing a Task.",
+    "tutorial_optionnal_occurence": "Role Occurrence",
+    "tutorial_optionnalPhase_occurence": "This allows you to define, when the number of players is greater than the number of roles, the distribution of players among the different roles. To define this, click on a Role tile.",
+    "tutorial_optionnal_comments": "Comments",
+    "tutorial_optionnalPhase_comments": "This allows you to add any information you deem important to specify on any tile. To add a comment, click on a tile, and the comments will be present in the sidebar."
 }
