--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -265,5 +265,59 @@
     "comments_button_answer": "Répondre",
     "comments_button_newComment": "Ajouter un commentaire",
     "comments_answer_delete": "cette Réponse",
-    "comments_comment_delete": "ce Commentaire"
+    "comments_comment_delete": "ce Commentaire",
+
+    "tutorial_resume": "Reprendre le tutoriel",
+    "tutorial_leave": "Réduire",
+    "tutorial_title": "Tutoriel",
+    "tutorial_finish" : "Félicitation, vous avez terminé le tutoriel, n'hésitez pas à consulter les options facultatives pour profiter pleinement du RLG Maker",
+    "tutorial_previous": "Précédent",
+    "tutorial_next": "Suivant",
+    "tutorial_phase": "Phase",
+    "tutorial_back": "Retour au tutoriel classique",
+    "tutorial_optionnal": "Options facultatives pour enrichir son scénario",
+    "tutorial_phase_1_title": "1. Se déplacer dans le RLG Maker :",
+    "tutorial_phase_1": "- Bouger de haut en bas : maintenez le clic droit de la souris et déplacez-vous dans la page ou glissez 2 doigts sur le pad (de bas en haut pour descendre et inversement pour monter). Autre solution : cliquez sur la zone de la mini map où vous souhaitez vous déplacer.",
+    "tutorial_phase_2_title": "2. Se déplacer dans le RLG Maker :",
+    "tutorial_phase_2": "- Zoomer ou dézoomer : utilisez la mollette de la souris ou sur un pad écartez 2 doigts pour zoomer et rapprochez-les pour dézoomer. Autre solution : utilisez les boutons de zoom en bas à droite de la page.",
+    "tutorial_phase_3_title": "3. Définir les objectifs pédagogiques et le contexte :",
+    "tutorial_phase_3": "Remplir les tuiles de gauche à droite.  Il n'y a pas d'ordre de priorité pour des tuiles dans une même colonne.",
+    "tutorial_phase_4_title": "4. Définir les rôles :",
+    "tutorial_phase_4": "Choisir les différents rôles présents dans votre scénario. Ils sont disposés dans une même colonne, le 2e est donc placé plus bas en dessous du 1er. IMPORTANT : les rôles devront faire des tâches ensemble (discussion, action, échange d'éléments) à 1 ou plusieurs moments.",
+    "tutorial_phase_5_title": "5. Dans l'ordre de votre choix : choisir et nommer les quêtes & définir les récompenses de la quête :",
+    "tutorial_phase_5": "Donner un nom à la quête de chaque rôle. Que va-t-il faire en quelques mots ? Que va obtenir le rôle à la fin de sa quête ? Débloquer une nouvelle quête, obtenir un objet,  monter en compétence dans un domaine, etc.",
+    "tutorial_phase_6_title": "6. Définir les tâches de chaque rôle :",
+    "tutorial_phase_6": "Définir toutes les actions à effectuer pour atteindre les objectifs pédagogiques définis plus tôt pour chaque rôle.",
+    "tutorial_phase_7_title": "7. Dans l'ordre de votre choix : mettre en évidence les tâches communes, identifier les prérequis & estimer la durée des tâches :",
+    "tutorial_phase_7": "Pour chaque tâche faite avec un autre rôle, cliquez sur la case en haut à droite de cette tâche et choisir le même symbole pour les tâches réalisées simultanément. Identifier l'ordre d'exécution des tâches d'un même rôle. Cliquer sur le bouton «prérequis» de la tâche et sélectionner la ou les tâches nécessaires pour exécuter celle-ci. Si une tâche est à faire après une autre, elle doit être placée dans la colonne à sa droite. Si une action est rapide à effectuer elle prendra 1 Unité de Temps (UT), mettre un UT plus grande allongera la taille de la tâche. Ceci permet de vérifier que les tâches communes peuvent être effectuées simultanément et que les scénarios soient de durée identique.",
+    "tutorial_phase_8_title": "8. Ordonner les tâches :",
+    "tutorial_phase_8": "Si cela n'a pas été effectué à la phase précédente, déplacer les tâches en fonction des prérequis grâce aux flèches qui apparaissent au survol d'une tâche. Les tâches d'une même colonne n'ont pas d'ordre d'exécution. Celles de la première colonne n'ont aucun prérequis et peuvent être exécutées dès le début du jeu.",
+    "tutorial_phase_9_title": "9. Ajouter des tâches annexes.",
+    "tutorial_phase_9": "Tâches rapides et non nécessaires pour atteindre les objectifs pédagogiques, elles servent à occuper un rôle pendant qu'un autre finit ses tâches pour atteindre une tâche commune ensemble ou même pour obtenir un temps de jeu équivalent entre les rôles. Un joueur peut faire toutes les tâches annexes s'il est rapide comme n'en faire aucune, cela ne doit pas être bloquant pour le scénario.",
+    "tutorial_optionnal_event": "Événement aléatoire",
+    "tutorial_optionnalPhase_event": "Ils sont utiles si vous souhaitez mettre un peu d'imprévu dans votre scénario, le jeu devient alors plus facilement rejouable. Pour en ajouter, cliquez sur le «+» comme pour ajouter une Tâche et sélectionnez «Événement aléatoire».",
+    "tutorial_optionnal_repeatTask": "Tâche répétée",
+    "tutorial_optionnalPhase_repeatTask": "Si une tâche doit être répétée un certain nombre de fois ou jusqu'à une certaine condition, alors cliquez sur cette tâche, et entrez ces conditions dans la tuile dédiée dans la barre latérale. Une icône apparaîtra sur la Tâche pour repérer cette indication plus facilement.",
+    "tutorial_optionnal_interrupt": "Interrompre la Tâche d'un autre Rôle",
+    "tutorial_optionnalPhase_interrupt": "Si une tâche peut être interrompue par un autre rôle alors cliquez sur cette tâche et remplissez les conditions dans la tuile en question dans la barre latérale. Une icône apparaîtra sur la Tâche pour repérer cette indication plus facilement.",
+    "tutorial_optionnal_rules": "Règles du jeu",
+    "tutorial_optionnalPhase_rules": "Si vous souhaitez définir précisément les règles de votre jeu.",
+    "tutorial_optionnal_finalTask": "Tâche finale",
+    "tutorial_optionnalPhase_finalTask": "Cette tâche permet de clôturer la quête. Il n'y a plus de tâche après celle-ci. S'il y a plusieurs manières de finir une quête, il est possible de mettre plusieurs Tâches finales, chacune représentant une fin différente.",
+    "tutorial_optionnal_repeat": "Répéter le tour",
+    "tutorial_optionnalPhase_repeat": "Cette tuile permet de répéter une séquence d'actions et évite de devoir recopier indéfiniment des Tâches. Les tâches à répéter peuvent être soit depuis le tout début de la quête soit depuis le début d'une Étape. Pour ajouter une tuile de ce type, cliquez sur un «+» comme pour ajouter une Tâche.",
+    "tutorial_optionnal_step": "Étape",
+    "tutorial_optionnalPhase_step": "Cette tuile permet de «découper» la quête en plusieurs parties s'il y en a.",
+    "tutorial_optionnal_supplementaryRole": "Rôle supplémentaire",
+    "tutorial_optionnalPhase_supplementaryRole": "Ceci permet à un rôle d'obtenir des options supplémentaires liées à cette nouvelle fonction. Par exemple il pourra effectuer des Tâches qui seront propres à ce rôle supplémentaire. Pour cela, renseignez les informations de ce rôle, puis cliquez sur la Tâche en question et sélectionnez ce rôle dans la tuile «Tâche liée au rôle supplémentaire» dans la barre latérale. Si vous avez défini une couleur particulière pour ce rôle, la Tâche liée aura la même couleur.",
+    "tutorial_optionnal_optionnalTask": "Tâche optionnelle",
+    "tutorial_optionnalPhase_optionnalTask": "Cette Tâche est nécessaire pour répondre aux objectifs pédagogiques contrairement aux Tâches annexes, cependant le rôle aura le choix entre 2 Tâches optionnelles pour effectuer ce qui lui est demandé. Par exemple s'il doit faire un site web, il pourrait soit (tâche optionnelle 1) partir d'une plateforme permettant de créer des sites web sans codage soit (tâche optionnelle 2) créer son site à partir de rien, avec du code.",
+    "tutorial_optionnal_characters": "Personnages non joueurs",
+    "tutorial_optionnalPhase_characters": "Il est possible d'ajouter des personnages non joueurs à votre scénario qui pourront interagir avec les Rôles. Pour cela, créez un personnage (1ere colonne à gauche) puis sélectionnez la tâche dans laquelle il interviendra et choisissez ce personnage dans la tuile associée dans la barre latérale. Une icône de la couleur de votre personnage apparaîtra sur la Tâche pour repérer cette indication plus facilement.",
+    "tutorial_optionnal_resource": "Ressources (& compétences)",
+    "tutorial_optionnalPhase_resource": "Distinguez les ressources communes à tous les joueurs, présentes en bas de la tuile Règles du jeu des ressources propres à chaque Rôle (définies en bas de leur tuile). Les ressources peuvent faire partie des pré-requis pour réaliser une Tâche.",
+    "tutorial_optionnal_occurence": "Occurence du Rôle",
+    "tutorial_optionnalPhase_occurence": "Ceci permet de définir lorsque le nombre de joueur est supérieur au nombre de rôles, la répartition des joueurs au sein des différents rôles. Pour définir cela, cliquez sur une tuile Rôle.",
+    "tutorial_optionnal_comments": "Commentaires",
+    "tutorial_optionnalPhase_comments": "Ceci permet d'ajouter tout élément qui vous semble important de préciser sur n'importe quelle tuile. Pour ajouter un commentaire, cliquez sur une tuile et les commentaires seront présents dans la barre latérale."
 }
