Changes to the tutorial + Removal of conditions on prerequisites (adding a condition on tasks other than subtasks preventing subtask prerequisites) + Addition of a condition for a unique common task symbol in a role + Fix clean-dialog text

--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -38,7 +38,7 @@
     "dialog_create_content": "Êtes vous sûr de vouloir créer",
     "dialog_delete_title": "Supprimer l'élément",
     "dialog_delete_content1": "Êtes vous sûr de vouloir supprimer",
-    "dialog_delete_content2": "et tout ce que ce la implique ?",
+    "dialog_delete_content2": "et tout ce que cela implique ?",
     "dialog_save_title": "Télécharger le scénario",
     "dialog_save_content": "Nom du projet :",
     "dialog_save_placeholder": "Mon Scénario",
@@ -176,8 +176,7 @@
     "task_prerequire_label": "Prérequis",
     "task_prerequire_tooltip": "Prérequis pour effectuer cette tâche",
     "task_prerequire_antecedents_title": "Antécédents",
-    "task_prerequire_antecedents_err1": "La première tâche de la ligne ne peut pas avoir d'antécédent",
-    "task_prerequire_antecedents_err2": "Veuillez d'abord entrer des identifiants aux tâches précédentes",
+    "task_prerequire_antecedents_err2": "Veuillez d'abord entrer des identifiants aux tâches",
     "task_prerequire_ressource_title": "Ressources & Compétences",
     "task_transform_tooltip": "Changer le type de cette tuile.",
     "task_transform_normalTask": "Transformer en Tâche",
@@ -276,22 +275,22 @@
     "tutorial_phase": "Phase",
     "tutorial_back": "Retour au tutoriel classique",
     "tutorial_optionnal": "Options facultatives pour enrichir son scénario",
-    "tutorial_phase_1_title": "1. Se déplacer dans le RLG Maker :",
-    "tutorial_phase_1": "- Bouger de haut en bas : maintenez le clic droit de la souris et déplacez-vous dans la page ou glissez 2 doigts sur le pad (de bas en haut pour descendre et inversement pour monter). Autre solution : cliquez sur la zone de la mini map où vous souhaitez vous déplacer.",
-    "tutorial_phase_2_title": "2. Se déplacer dans le RLG Maker :",
-    "tutorial_phase_2": "- Zoomer ou dézoomer : utilisez la mollette de la souris ou sur un pad écartez 2 doigts pour zoomer et rapprochez-les pour dézoomer. Autre solution : utilisez les boutons de zoom en bas à droite de la page.",
+    "tutorial_phase_1_title": "1. Se déplacer dans le RLG Maker. Plusieurs options au choix :",
+    "tutorial_phase_1": "- maintenez le clic gauche de la souris et déplacez-vous dans la page\n- utilisez les flèches du clavier\n- faites glisser la zone grise de la minimap où vous souhaitez vous déplacer\n- Avec le pad : maintenir le clic gauche + glisser un doigt sur le pad OU double tap en maintenant le 2e tap pour se déplacer",
+    "tutorial_phase_2_title": "2. Zoomer ou dézoomer :",
+    "tutorial_phase_2": "- utilisez la mollette de la souris\n- sur un pad, écartez 2 doigts pour zoomer et rapprochez-les pour dézoomer\n- utilisez les boutons de zoom en bas à droite de la page",
     "tutorial_phase_3_title": "3. Définir les objectifs pédagogiques et le contexte :",
-    "tutorial_phase_3": "Remplir les tuiles de gauche à droite.  Il n'y a pas d'ordre de priorité pour des tuiles dans une même colonne.",
+    "tutorial_phase_3": "Remplir les 4 tuiles de gauche à droite.  Il n'y a pas d'ordre de priorité pour des tuiles dans une même colonne.",
     "tutorial_phase_4_title": "4. Définir les rôles :",
-    "tutorial_phase_4": "Choisir les différents rôles présents dans votre scénario. Ils sont disposés dans une même colonne, le 2e est donc placé plus bas en dessous du 1er. IMPORTANT : les rôles devront faire des tâches ensemble (discussion, action, échange d'éléments) à 1 ou plusieurs moments.",
+    "tutorial_phase_4": "Choisir les différents rôles présents dans votre scénario. Ils sont disposés dans une même colonne, le 2e est donc placé plus bas en dessous du 1er.\nIMPORTANT : les rôles devront faire des tâches ensemble (discussion, action, échange d'éléments) à 1 ou plusieurs moments.",
     "tutorial_phase_5_title": "5. Dans l'ordre de votre choix : choisir et nommer les quêtes & définir les récompenses de la quête :",
-    "tutorial_phase_5": "Donner un nom à la quête de chaque rôle. Que va-t-il faire en quelques mots ? Que va obtenir le rôle à la fin de sa quête ? Débloquer une nouvelle quête, obtenir un objet,  monter en compétence dans un domaine, etc.",
+    "tutorial_phase_5": "Donnez un nom à la quête de chaque rôle. Que va-t-il faire en quelques mots ?\nQue va obtenir le rôle à la fin de sa quête ?\nDébloquer une nouvelle quête, obtenir un objet,  monter en compétence dans un domaine, etc.",
     "tutorial_phase_6_title": "6. Définir les tâches de chaque rôle :",
-    "tutorial_phase_6": "Définir toutes les actions à effectuer pour atteindre les objectifs pédagogiques définis plus tôt pour chaque rôle.",
-    "tutorial_phase_7_title": "7. Dans l'ordre de votre choix : mettre en évidence les tâches communes, identifier les prérequis & estimer la durée des tâches :",
-    "tutorial_phase_7": "Pour chaque tâche faite avec un autre rôle, cliquez sur la case en haut à droite de cette tâche et choisir le même symbole pour les tâches réalisées simultanément. Identifier l'ordre d'exécution des tâches d'un même rôle. Cliquer sur le bouton «prérequis» de la tâche et sélectionner la ou les tâches nécessaires pour exécuter celle-ci. Si une tâche est à faire après une autre, elle doit être placée dans la colonne à sa droite. Si une action est rapide à effectuer elle prendra 1 Unité de Temps (UT), mettre un UT plus grande allongera la taille de la tâche. Ceci permet de vérifier que les tâches communes peuvent être effectuées simultanément et que les scénarios soient de durée identique.",
+    "tutorial_phase_6": "Définissez toutes les actions à effectuer pour atteindre les objectifs pédagogiques définis plus tôt pour chaque rôle.",
+    "tutorial_phase_7_title": "7. Dans l'ordre de votre choix : mettre en évidence les tâches communes, identifier les prérequis & estimer la durée des tâches :",
+    "tutorial_phase_7": "- Pour chaque tâche faite avec un autre rôle, cliquez sur la case en haut à droite de cette tâche et choisir le même symbole pour les tâches réalisées simultanément.\n- Identifiez l'ordre d'exécution des tâches d'un même rôle. Cliquer sur le bouton «prérequis» de la tâche et sélectionner la ou les tâches nécessaires pour exécuter celle-ci\n- Si une action est rapide à effectuer elle prendra 1 Unité de Temps (UT), mettre une UT plus grande allongera la taille de la tâche.\nCeci permet de vérifier que les tâches communes peuvent être effectuées simultanément et que les scénarios soient de durée identique.",
     "tutorial_phase_8_title": "8. Ordonner les tâches :",
-    "tutorial_phase_8": "Si cela n'a pas été effectué à la phase précédente, déplacer les tâches en fonction des prérequis grâce aux flèches qui apparaissent au survol d'une tâche. Les tâches d'une même colonne n'ont pas d'ordre d'exécution. Celles de la première colonne n'ont aucun prérequis et peuvent être exécutées dès le début du jeu.",
+    "tutorial_phase_8": "Si cela n'a pas été effectué à la phase précédente, déplacez les tâches en fonction des prérequis grâce aux flèches qui apparaissent au survol d'une tâche. Si une tâche est à faire après une autre, elle doit être placée dans la colonne à sa droite. Les tâches d'une même colonne n'ont pas d'ordre d'exécution. Celles de la première colonne n'ont aucun prérequis et peuvent être exécutées dès le début du jeu.",
     "tutorial_phase_9_title": "9. Ajouter des tâches annexes.",
     "tutorial_phase_9": "Tâches rapides et non nécessaires pour atteindre les objectifs pédagogiques, elles servent à occuper un rôle pendant qu'un autre finit ses tâches pour atteindre une tâche commune ensemble ou même pour obtenir un temps de jeu équivalent entre les rôles. Un joueur peut faire toutes les tâches annexes s'il est rapide comme n'en faire aucune, cela ne doit pas être bloquant pour le scénario.",
     "tutorial_optionnal_event": "Événement aléatoire",
