--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -176,8 +176,7 @@
     "task_prerequire_label": "Prerequisites",
     "task_prerequire_tooltip": "Prerequisites for this task",
     "task_prerequire_antecedents_title": "Antecedents",
-    "task_prerequire_antecedents_err1": "The first task in the line cannot have an antecedent",
-    "task_prerequire_antecedents_err2": "Please first input identifiers for the preceding tasks",
+    "task_prerequire_antecedents_err2": "Please first input identifiers for the tasks",
     "task_prerequire_ressource_title": "Resources & Skills",
     "task_transform_tooltip": "Change the type of this tile.",
     "task_transform_normalTask": "Convert to Task",
@@ -276,24 +275,24 @@
     "tutorial_phase": "Phase",
     "tutorial_back": "Back to the classic tutorial",
     "tutorial_optionnal": "Optional features to enhance your scenario",
-    "tutorial_phase_1_title": "1. Navigate in the RLG Maker: ",
-    "tutorial_phase_1": "- Move up and down: Hold the right mouse button and drag on the page, or swipe two fingers on the touchpad (up to scroll down and vice versa to scroll up). Alternatively, click on the mini-map area where you want to move.",
-    "tutorial_phase_2_title": "2. Navigate in the RLG Maker:",
-    "tutorial_phase_2": "- Zoom in or out: use the mouse wheel or spread 2 fingers on a touchpad to zoom in and pinch them together to zoom out. Another option: use the zoom buttons at the bottom right of the page.",
+    "tutorial_phase_1_title": "1. Navigate in the RLG Maker. Several options are available: ",
+    "tutorial_phase_1": "- Hold down the left mouse button and move around the page\n- use the arrow keys on the keyboard\n- drag the gray area of the minimap to the location where you want to navigate\n- With the pad: hold down the left click + slide a finger on the pad OR double tap while holding down the 2nd tap to move around",
+    "tutorial_phase_2_title": "2. Zoom in or zoom out:",
+    "tutorial_phase_2": "- use the mouse scroll wheel\n- on a touchpad, spread two fingers to zoom in and bring them together to zoom out\n- use the zoom buttons at the bottom right of the page",
     "tutorial_phase_3_title": "3. Define pedagogical objectives and context:",
-    "tutorial_phase_3": "Fill the tiles from left to right. There is no priority order for tiles in the same column.",
+    "tutorial_phase_3": "Fill the 4 tiles from left to right. There is no priority order for tiles in the same column.",
     "tutorial_phase_4_title": "4. Define roles:",
-    "tutorial_phase_4": "Choose the different roles present in your scenario. They are arranged in the same column, so the 2nd one is placed below the 1st. IMPORTANT: roles should perform tasks together (discussion, action, exchange of elements) at 1 or more moments.",
+    "tutorial_phase_4": "Choose the different roles present in your scenario. They are arranged in the same column, so the 2nd one is placed below the 1st.\nIMPORTANT: roles should perform tasks together (discussion, action, exchange of elements) at 1 or more moments.",
     "tutorial_phase_5_title": "5. In the order of your choice: choose and name quests & define quest rewards:",
-    "tutorial_phase_5": "Give a name to the quest for each role. What will they do in a few words? What will the role obtain at the end of their quest? Unlock a new quest, obtain an item, improve skills in a domain, etc.",
+    "tutorial_phase_5": "Give a name to the quest for each role. What will they do in a few words?\nWhat will the role obtain at the end of their quest?\nUnlock a new quest, obtain an item, improve skills in a domain, etc.",
     "tutorial_phase_6_title": "6. Define tasks for each role:",
     "tutorial_phase_6": "Define all actions to be taken to achieve the pedagogical objectives defined earlier for each role.",
     "tutorial_phase_7_title": "7. In the order of your choice: highlight common tasks, identify prerequisites & estimate task duration:",
-    "tutorial_phase_7": "For each task done with another role, click on the top right of that task and choose the same symbol for tasks performed simultaneously. Identify the order of execution of tasks for the same role. Click on the 'prerequisites' button for the task and select the task(s) necessary to execute it. If a task is to be done after another, it should be placed in the column to its right. If an action is quick to perform, it will take 1 Unit of Time (UT), setting a larger UT will increase the size of the task. This ensures that common tasks can be performed simultaneously and that scenarios have the same duration.",
+    "tutorial_phase_7": "- For each task done with another role, click on the top right of that task and choose the same symbol for tasks performed simultaneously\n- Identify the order of execution of tasks for the same role. Click on the 'prerequisites' button for the task and select the task(s) necessary to execute it\n- If an action is quick to perform, it will take 1 Time Unit (TU), setting a larger TU will increase the size of the task\nThis ensures that common tasks can be performed simultaneously and that scenarios have the same duration.",
     "tutorial_phase_8_title": "8. Order the tasks:",
-    "tutorial_phase_8": "If not done in the previous phase, move tasks based on prerequisites using the arrows that appear when hovering over a task. Tasks in the same column have no execution order. Those in the first column have no prerequisites and can be executed at the beginning of the game.",
-    "tutorial_phase_9_title": "9. Add side tasks.",
-    "tutorial_phase_9": "Quick and unnecessary tasks to achieve pedagogical objectives, they serve to occupy a role while another finishes their tasks to reach a common task together or even to achieve equivalent playtime between roles. A player can do all side tasks quickly or none at all; it should not be a blocking factor for the scenario.",
+    "tutorial_phase_8": "If not done in the previous phase, move tasks based on prerequisites using the arrows that appear when hovering over a task. If a task is to be done after another, it should be placed in the column to its right. Tasks in the same column have no execution order. Those in the first column have no prerequisites and can be executed at the beginning of the game.",
+    "tutorial_phase_9_title": "9. Add side tasks:",
+    "tutorial_phase_9": "Quick and unnecessary tasks to achieve pedagogical objectives, they are used to occupy a role while another finishes their tasks to reach a common task together or even to achieve equivalent playtime between roles. A player can do all side tasks quickly or none at all; it should not be a blocking factor for the scenario.",
     "tutorial_optionnal_event": "Random Event",
     "tutorial_optionnalPhase_event": "These are useful if you want to add an element of unpredictability to your scenario, making the game more replayable. To add one, click on the '+' as if adding a Task and select 'Random Event'.",
     "tutorial_optionnal_repeatTask": "Repeated Task",
