Rename optional task to alternative task + rename repeat task + change guide pdf

--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -182,7 +182,7 @@
     "task_transform_tooltip": "Changer le type de cette tuile.",
     "task_transform_normalTask": "Transformer en Tâche",
     "task_transform_annexeTask": "Transformer en Tâche annexe",
-    "task_transform_optionnalTask": "Transformer en Tâche optionnelle",
+    "task_transform_optionnalTask": "Transformer en Tâche alternative",
     "task_transform_finalTask": "Transformer en Tâche finale",
     "normalTask_title": "Tâche",
     "normalTask_action_placeholder": "Positionner dans l'ordre les balises HTML principales",
@@ -191,12 +191,12 @@
     "annexeTask_tooltip": "Tâches annexe: ces tâches ne sont pas obligatoires pour atteindre les objectifs pédagogiques définis. Elles sont rapides et permettent aux joueurs plus rapides d'être occupés en attendant que les autres finissent leurs tâches. Il est préférable d'en mettre.",
     "annexeTask_action_placeholder": "Vérifier ses connaissances sur les formulaires PHP",
     "annexeTask_add": "Ajouter une Tâche annexe",
-    "optionnalTask_title": "Tâche optionnelle",
+    "optionnalTask_title": "Tâche alternative",
     "optionnalTask_title1": "Tâche",
-    "optionnalTask_title2": "optionnelle",
-    "optionnalTask_tooltip": "Tâche optionnelle: cette tâche peut être réalisée ou non. À la différence d'une tâche annexe, les tâches optionnelles sont utiles pour répondre aux objectifs pédagogiques, comme les tâches simples, mais offent la possibilité au joueur de réaliser la tâche de plusieurs manières différentes.",
+    "optionnalTask_title2": "alternative",
+    "optionnalTask_tooltip": "Tâche alternative: cette tâche peut être réalisée ou non. À la différence d'une tâche annexe, les tâches alternatives sont utiles pour répondre aux objectifs pédagogiques, comme les tâches simples, mais offent la possibilité au joueur de réaliser la tâche de plusieurs manières différentes.",
     "optionnalTask_action_placeholder": "Partir d'un template / Partir de zéro",
-    "optionnalTask_add": "Ajouter une Tâche optionnelle",
+    "optionnalTask_add": "Ajouter une Tâche alternative",
     "randomEvent_title": "Événement aléatoire",
     "randomEvent_title1": "Événement",
     "randomEvent_title2": "aléatoire",
@@ -310,8 +310,8 @@
     "tutorial_optionnalPhase_step": "Cette tuile permet de «découper» la quête en plusieurs parties s'il y en a.",
     "tutorial_optionnal_supplementaryRole": "Rôle supplémentaire",
     "tutorial_optionnalPhase_supplementaryRole": "Ceci permet à un rôle d'obtenir des options supplémentaires liées à cette nouvelle fonction. Par exemple il pourra effectuer des Tâches qui seront propres à ce rôle supplémentaire. Pour cela, renseignez les informations de ce rôle, puis cliquez sur la Tâche en question et sélectionnez ce rôle dans la tuile «Tâche liée au rôle supplémentaire» dans la barre latérale. Si vous avez défini une couleur particulière pour ce rôle, la Tâche liée aura la même couleur.",
-    "tutorial_optionnal_optionnalTask": "Tâche optionnelle",
-    "tutorial_optionnalPhase_optionnalTask": "Cette Tâche est nécessaire pour répondre aux objectifs pédagogiques contrairement aux Tâches annexes, cependant le rôle aura le choix entre 2 Tâches optionnelles pour effectuer ce qui lui est demandé. Par exemple s'il doit faire un site web, il pourrait soit (tâche optionnelle 1) partir d'une plateforme permettant de créer des sites web sans codage soit (tâche optionnelle 2) créer son site à partir de rien, avec du code.",
+    "tutorial_optionnal_optionnalTask": "Tâche alternative",
+    "tutorial_optionnalPhase_optionnalTask": "Cette Tâche est nécessaire pour répondre aux objectifs pédagogiques contrairement aux Tâches annexes, cependant le rôle aura le choix entre 2 Tâches alternatives pour effectuer ce qui lui est demandé. Par exemple s'il doit faire un site web, il pourrait soit (tâche alternative 1) partir d'une plateforme permettant de créer des sites web sans codage soit (tâche alternative 2) créer son site à partir de rien, avec du code.",
     "tutorial_optionnal_characters": "Personnages non joueurs",
     "tutorial_optionnalPhase_characters": "Il est possible d'ajouter des personnages non joueurs à votre scénario qui pourront interagir avec les Rôles. Pour cela, créez un personnage (1ere colonne à gauche) puis sélectionnez la tâche dans laquelle il interviendra et choisissez ce personnage dans la tuile associée dans la barre latérale. Une icône de la couleur de votre personnage apparaîtra sur la Tâche pour repérer cette indication plus facilement.",
     "tutorial_optionnal_resource": "Ressources (& compétences)",
