--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -182,7 +182,7 @@
     "task_transform_tooltip": "Change the type of this tile.",
     "task_transform_normalTask": "Convert to Task",
     "task_transform_annexeTask": "Convert to Subtask",
-    "task_transform_optionnalTask": "Convert to Optional Task",
+    "task_transform_optionnalTask": "Convert to Alternative Task",
     "task_transform_finalTask": "Convert to Final Task",
     "normalTask_title": "Task",
     "normalTask_action_placeholder": "Ordering the main HTML tags",
@@ -191,12 +191,12 @@
     "annexeTask_tooltip": "Subtasks: these tasks are not mandatory to achieve the defined educational objectives. They are quick and allow faster players to be occupied while waiting for others to finish their tasks. It is advisable to include them.",
     "annexeTask_action_placeholder": "Test your knowledge of PHP forms",
     "annexeTask_add": "Add a Subtask",
-    "optionnalTask_title": "Optionnal Task",
-    "optionnalTask_title1": "Optionnal",
+    "optionnalTask_title": "Alternative Task",
+    "optionnalTask_title1": "Alternative",
     "optionnalTask_title2": "Task",
-    "optionnalTask_tooltip": "Optional Task: this task can be completed or not. Unlike a subtask, optional tasks are useful for achieving educational objectives, like simple tasks, but offer the player the possibility to complete the task in several different ways.",
+    "optionnalTask_tooltip": "Alternative Task: this task can be completed or not. Unlike a subtask, alternative tasks are useful for achieving educational objectives, like simple tasks, but offer the player the possibility to complete the task in several different ways.",
     "optionnalTask_action_placeholder": "Starting from a template / Starting from scratch",
-    "optionnalTask_add": "Add an Optionnal Task",
+    "optionnalTask_add": "Add an Alternative Task",
     "randomEvent_title": "Random Event",
     "randomEvent_title1": "Random",
     "randomEvent_title2": "Event",
@@ -206,7 +206,7 @@
     "finalTask_tooltip": "Final Task: This is the last action to be completed to conclude the quest.",
     "finalTask_action_placeholder": "Putting the website online",
     "finalTask_add": "Add a Final Task",
-    "repeatTask_title": "Repeat",
+    "repeatTask_title": "Repeat the round",
     "repeatTask_while": "until:",
     "repeatTask_action_placeholder": "Validate with the sponsor",
     "repeatTask_add": "Restart the turn",
@@ -310,8 +310,8 @@
     "tutorial_optionnalPhase_step": "This tile allows you to 'break down' the quest into multiple parts if necessary.",
     "tutorial_optionnal_supplementaryRole": "Supplementary Role",
     "tutorial_optionnalPhase_supplementaryRole": "This allows a role to have additional options related to this new function. For example, they can perform tasks specific to this supplementary role. To do this, provide the information for this role, then click on the relevant Task and select this role in the 'Task linked to the supplementary role' tile in the sidebar. If you have defined a specific color for this role, the linked Task will have the same color.",
-    "tutorial_optionnal_optionnalTask": "Optional Task",
-    "tutorial_optionnalPhase_optionnalTask": "This Task is necessary to meet pedagogical objectives, unlike additional Tasks. However, the role will have the choice between 2 optional Tasks to accomplish what is asked. For example, if they have to create a website, they could either (optional Task 1) use a platform that allows creating websites without coding or (optional Task 2) create their site from scratch, with code.",
+    "tutorial_optionnal_optionnalTask": "Alternative Task",
+    "tutorial_optionnalPhase_optionnalTask": "This Task is necessary to meet pedagogical objectives, unlike additional Tasks. However, the role will have the choice between 2 alternative Tasks to accomplish what is asked. For example, if they have to create a website, they could either (alternative Task 1) use a platform that allows creating websites without coding or (alternative Task 2) create their site from scratch, with code.",
     "tutorial_optionnal_characters": "Non-player Characters",
     "tutorial_optionnalPhase_characters": "It is possible to add non-player characters to your scenario who can interact with the Roles. To do this, create a character (1st column on the left) and then select the task in which they will intervene and choose this character in the associated tile in the sidebar. An icon in the color of your character will appear on the Task to easily identify this indication.",
     "tutorial_optionnal_resource": "Resources (& skills)",
