--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -153,6 +153,9 @@
     "role_supplementaryRole_rule_label": "Règles",
     "role_supplementaryRole_rule_tooltip": "Règles spécifiques à ce rôle (a-t-il des contraintes ou des droits, accès supplémentaires ?)",
     "role_supplementaryRole_delete": "ce Rôle supplémentaire",
+    "role_copy_tooltip": "Copier le contenu",
+    "role_copy_snackbar": "Role copié, rendez-vous dans une autre mission pour le coller",
+    "role_paste_tooltip": "Coller le contenu",
 
     "steps_mission": "Chronologie de la mission",
     "steps_role": "Chronologie du rôle",
