translation en strings update

--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -82,8 +82,10 @@
     "missionEducationnalObjective_objective_label": "Commun pour la mission",
     "missionEducationnalObjective_objective_placeholder": "Comprendre les rôles impliqués dans la conception d'un site web",
     "missionEducationnalObjective_objective_tooltip": "Ce que l’on veut atteindre en situation de formation. Commencer chaque objectif par un verbe. Si votre jeu est composé de plusieurs missions, distinguez les objectifs globaux du jeu et les objectifs de chaque mission",
-    "missionContext_clean": "Contexte de la Mission",
-    "missionContext_title": "Contexte de la Mission",
+    "missionContext_clean_part1": "Contexte de la mission",
+    "missionContext_clean_part2": "",
+    "missionContext_title_part1": "Contexte de la mission",
+    "missionContext_title_part2": "",
     "missionContext_duration_label": "Durée",
     "missionContext_duration_placeholder": "1h",
     "missionContext_duration_tooltip": "Combien de temps va durer la mission ?",
