--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -13,7 +13,7 @@
     "plus_tooltip": "Add a new tile of this type.",
     "zoomIn_tooltip": "Zoom In.",
     "zoomOut_tooltip": "Zoom Out.",
-    "enableHelp_label": "Enable the aids",
+    "enableHelp_label": "Enable the tooltips",
     "enableHelp_tooltip": "Description of each element of the RLG Maker.",
     "unity_label": "Integrate the game into Unity (WIP)",
     "unity_tooltip": "Usage in a specific game template. Contact gaelle.guigon@imt-nord-europe.fr for more information. Not available in this version.",
@@ -82,8 +82,10 @@
     "missionEducationnalObjective_objective_label": "Common for mission",
     "missionEducationnalObjective_objective_placeholder": "Understand the roles involved in designing a website",
     "missionEducationnalObjective_objective_tooltip": "What you want to achieve in a training situation. Start each objective with a verb. If your game consists of several missions, distinguish between the overall objectives of the game and the objectives of each mission.",
-    "missionContext_clean": "Mission background",
-    "missionContext_title": "Mission background",
+    "missionContext_clean_part1": "Mission",
+    "missionContext_clean_part2": " background",
+    "missionContext_title_part1": "Mission",
+    "missionContext_title_part2": " background",
     "missionContext_duration_label": "Duration",
     "missionContext_duration_placeholder": "1 hr",
     "missionContext_duration_tooltip": "How long will the mission last?",
@@ -185,20 +187,20 @@
     "task_prerequire_ressource_title": "Resources & Skills",
     "task_transform_tooltip": "Change the type of this tile.",
     "task_transform_normalTask": "Convert to Task",
-    "task_transform_annexeTask": "Convert to Subtask",
+    "task_transform_annexeTask": "Convert to Side task",
     "task_transform_optionnalTask": "Convert to Alternative Task",
     "task_transform_finalTask": "Convert to Final Task",
     "normalTask_title": "Task",
     "normalTask_action_placeholder": "Ordering the main HTML tags",
     "normalTask_add": "Add a Task",
-    "annexeTask_title": "Subtask",
-    "annexeTask_tooltip": "Subtasks: these tasks are not mandatory to achieve the defined educational objectives. They are quick and allow faster players to be occupied while waiting for others to finish their tasks. It is advisable to include them.",
+    "annexeTask_title": "Side task",
+    "annexeTask_tooltip": "Side tasks: these tasks are not mandatory to achieve the defined educational objectives. They are quick and allow faster players to be occupied while waiting for others to finish their tasks. It is advisable to include them.",
     "annexeTask_action_placeholder": "Test your knowledge of PHP forms",
-    "annexeTask_add": "Add a Subtask",
+    "annexeTask_add": "Add a Side task",
     "optionnalTask_title": "Alternative Task",
     "optionnalTask_title1": "Alternative",
     "optionnalTask_title2": "Task",
-    "optionnalTask_tooltip": "Alternative Task: this task can be completed or not. Unlike a subtask, alternative tasks are useful for achieving educational objectives, like simple tasks, but offer the player the possibility to complete the task in several different ways.",
+    "optionnalTask_tooltip": "Alternative Task: this task can be completed or not. Unlike a side task, alternative tasks are useful for achieving educational objectives, like simple tasks, but offer the player the possibility to complete the task in several different ways.",
     "optionnalTask_action_placeholder": "Starting from a template / Starting from scratch",
     "optionnalTask_add": "Add an Alternative Task",
     "randomEvent_title": "Random Event",
@@ -215,22 +217,22 @@
     "repeatTask_action_placeholder": "Validate with the sponsor",
     "repeatTask_add": "Restart the turn",
 
-    "char_create_title": "Create a new non playable character",
-    "char_create_tooltip": "If non-player characters (NPCs) are to be involved in the scenario, they must be described with this tile. Each character has its own color and is visible on the tasks in which it is involved. The teacher can be considered a character if he/she doesn't have a full Role.",
+    "char_create_title": "Create a new non player character",
+    "char_create_tooltip": "If non-playabe characters (NPCs) are to be involved in the scenario, they must be described with this tile. Each character has its own color and is visible on the tasks in which it is involved. The teacher can be considered a character if he/she doesn't have a full Role.",
     "char_name_label": "Name",
     "char_description_label": "Description",
     "char_color_label": "Color",
-    "chars_title": "Non playable characters",
+    "chars_title": "Non player characters",
     "char_tooltip": "To involve this character in a Task or Random Event, click on the respective tile and select this character from the sidebar.",
     "char_button_create": "Create",
     "char_button_delete": "Delete",
-    "char_clean": "Non playable characters (this includes the deletion of all characters)",
-    "char_delete": "this non playable character",
+    "char_clean": "Non player characters (this includes the deletion of all characters)",
+    "char_delete": "this non-player character",
     
     "sider_char_tooltip": "Allows assigning one or more previously created characters to the task.",
     "sider_char_select_title": "Assigning a character already created",
     "sider_char_button_select": "Assign",
-    "sider_chars_title": "Non playable charater(s) used",
+    "sider_chars_title": "Non-player charater(s) used",
     "sider_char_button_unselect": "Remove from my task",
 
     "rules_title": "Game rules",
@@ -316,8 +318,8 @@
     "tutorial_optionnalPhase_supplementaryRole": "This allows a role to have additional options related to this new function. For example, they can perform tasks specific to this supplementary role. To do this, provide the information for this role, then click on the relevant Task and select this role in the 'Task linked to the supplementary role' tile in the sidebar. If you have defined a specific color for this role, the linked Task will have the same color.",
     "tutorial_optionnal_optionnalTask": "Alternative Task",
     "tutorial_optionnalPhase_optionnalTask": "This Task is necessary to meet pedagogical objectives, unlike additional Tasks. However, the role will have the choice between 2 alternative Tasks to accomplish what is asked. For example, if they have to create a website, they could either (alternative Task 1) use a platform that allows creating websites without coding or (alternative Task 2) create their site from scratch, with code.",
-    "tutorial_optionnal_characters": "Non-player Characters",
-    "tutorial_optionnalPhase_characters": "It is possible to add non-player characters to your scenario who can interact with the Roles. To do this, create a character (1st column on the left) and then select the task in which they will intervene and choose this character in the associated tile in the sidebar. An icon in the color of your character will appear on the Task to easily identify this indication.",
+    "tutorial_optionnal_characters": "Non Player Characters",
+    "tutorial_optionnalPhase_characters": "It is possible to add non player characters to your scenario who can interact with the Roles. To do this, create a character (1st column on the left) and then select the task in which they will intervene and choose this character in the associated tile in the sidebar. An icon in the color of your character will appear on the Task to easily identify this indication.",
     "tutorial_optionnal_resource": "Resources (& skills)",
     "tutorial_optionnalPhase_resource": "Distinguish between resources common to all players, found at the bottom of the Game Rules tile, and resources specific to each Role (defined at the bottom of their tile). Resources can be prerequisites for completing a Task.",
     "tutorial_optionnal_occurence": "Role Occurrence",
